--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="username">UserName</string>
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
+    <string name="error">Error</string>
+
 </resources>
