--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
     <string name="error">Error</string>
+    <string name="email">Email</string>
 
+<!--TODO: move to attrs... for mocking used: https://designer.mocky.io/ -->
+    <string name="email_exist_url">https://run.mocky.io/v3/01f3c142-ff9d-4925-8298-1132e6d740df</string>
+    <string name="email_not_exist_url">https://run.mocky.io/v3/f8cebfe2-036f-4845-8b77-7271bd87a6d5</string>
+    <string name="email_not_exist_404_url">https://run.mocky.io/v3/670a18a8-407d-43e2-a1bf-4c914920cabe</string>
+
+    <string name="get_user_token_url">https://run.mocky.io/v3/67711067-83dd-481c-9ccd-403c416dc36c</string>
 </resources>
